src/objects/Petition__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number__c</fullName>
        <description>Referenced from parent Petition case</description>
        <label>ADCVD Case Number Text Value</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <description>Referenced from parent Petition case</description>
        <inlineHelpText>This should be in the following format:
A-###-### for AD 
C-###-### for CVD</inlineHelpText>
        <label>ADCVD Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD ME</fullName>
                </value>
                <value>
                    <fullName>AD NME</fullName>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Petitions</relationshipLabel>
        <relationshipName>Petitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Concurrence_to_DAS__c</fullName>
        <label>Actual Initiation Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Issues_to_DAS__c</fullName>
        <label>Actual Initiation Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Signature__c</fullName>
        <description>Actual Initiation Signature</description>
        <inlineHelpText>Actual Initiation Signature</inlineHelpText>
        <label>Actual Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>CBP Case Number</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calculated_Initiation_Signature__c</fullName>
        <label>Calculated Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Concat_Text_Values__c</fullName>
        <label>Case Concat Text Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Referenced from parent Petition case</description>
        <label>Case Number</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Referenced from parent Petition case</description>
        <inlineHelpText>This should be in the following format:
A-###-### for AD 
C-###-### for CVD</inlineHelpText>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD ME</fullName>
                </value>
                <value>
                    <fullName>AD NME</fullName>
                </value>
                <value>
                    <fullName>CVD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <description>Referenced from parent petition</description>
        <label>Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cement and Ceramics</fullName>
                </value>
                <value>
                    <fullName>Chemicals and Allied Industries</fullName>
                </value>
                <value>
                    <fullName>Foodstuffs</fullName>
                </value>
                <value>
                    <fullName>Machinery and Automotive</fullName>
                </value>
                <value>
                    <fullName>Minerals</fullName>
                </value>
                <value>
                    <fullName>Other Metals and Articles of Metal</fullName>
                </value>
                <value>
                    <fullName>Other Mfg.</fullName>
                </value>
                <value>
                    <fullName>Paper and Paperboard</fullName>
                </value>
                <value>
                    <fullName>Plastics and Rubber</fullName>
                </value>
                <value>
                    <fullName>Steel-Related</fullName>
                </value>
                <value>
                    <fullName>Textiles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Referenced from parent Petition</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiation_Announcement_Date__c</fullName>
        <label>Initiation Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Concurrence_Due_to_DAS__c</fullName>
        <label>Initiation Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Extension_Remaining__c</fullName>
        <description>Extension Number of days remaining for Initiation</description>
        <formula>20 - Initiation_Extension_of_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiation Extension Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiation_Extension_of_days__c</fullName>
        <description>Initiation Extension (# of days)</description>
        <inlineHelpText>Initiation Extension (# of days)</inlineHelpText>
        <label>Initiation Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiation_Issues_Due_to_DAS__c</fullName>
        <label>Initiation Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_390 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_390)) &amp; Id,  Petition_Name__c , &apos;_self&apos;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Resolved__c</fullName>
        <label>Litigation Resolved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation_Status__c</fullName>
        <label>Litigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation_YesNo__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Litigation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_History_Data__c</fullName>
        <label>Lotus Notes History Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_Litigation_ID__c</fullName>
        <label>Lotus Notes Litigation ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Announcement_Date__c</fullName>
        <label>Next Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Due_to_DAS_Deadline__c</fullName>
        <label>Next Due to DAS Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Major_Deadline__c</fullName>
        <label>Next Major Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Office_Deadline__c</fullName>
        <label>Next Office Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Office_PM_Deadline__c</fullName>
        <label>Next Office/PM Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADCVD_Offices</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_of_Domestic_Industry__c</fullName>
        <label>% of Domestic Industry</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period_for_Trade_Data__c</fullName>
        <label>Period for Trade Data</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Filed__c</fullName>
        <label>Petition Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petition_Name__c</fullName>
        <formula>ADCVD_Case_Number__c +&apos;--&apos;+  Name</formula>
        <label>Petition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Petition_Outcome__c</fullName>
        <label>Petition Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deficient Petition/Did Not Initiate</fullName>
                </value>
                <value>
                    <fullName>Initiated from Petition</fullName>
                </value>
                <value>
                    <fullName>Petition Withdrawn/Did Not Initiate</fullName>
                </value>
                <value>
                    <fullName>Self-Initiated</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                    <isActive>false</isActive>
                    <label>Initiated</label>
                </value>
                <value>
                    <fullName>Petition_Withdrawn_Did_Not_Initiate</fullName>
                    <isActive>false</isActive>
                    <label>Petition_Withdrawn_Did_Not_Initiate</label>
                </value>
                <value>
                    <fullName>Self Initiate in Progress</fullName>
                    <isActive>false</isActive>
                    <label>Self Initiate in Progress</label>
                </value>
                <value>
                    <fullName>Self-Initiate In Progress</fullName>
                    <isActive>false</isActive>
                    <label>Self-Initiate In Progress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text_Value__c</fullName>
        <label>Product Short Name Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <description>Product Short Name</description>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Referenced from parent Petition</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by a Schedulable class to cause the Tolling Date Service to recalculate tolling days whenever a calculated announcement date is equal to &quot;yesterday when the associated trigger calculates the next announcement date.</description>
        <inlineHelpText>For system use only.</inlineHelpText>
        <label>Schedule Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Filed</fullName>
                    <isActive>false</isActive>
                    <label>Filed</label>
                </value>
                <value>
                    <fullName>Rejected/Deficient/Negative Finding</fullName>
                    <isActive>false</isActive>
                    <label>Rejected/Deficient/Negative Finding</label>
                </value>
                <value>
                    <fullName>Remand/International Litigation</fullName>
                    <isActive>false</isActive>
                    <label>Remand/International Litigation</label>
                </value>
                <value>
                    <fullName>Self Initiating</fullName>
                    <isActive>false</isActive>
                    <label>Self Initiating</label>
                </value>
                <value>
                    <fullName>With the Court</fullName>
                    <isActive>false</isActive>
                    <label>With the Court</label>
                </value>
                <value>
                    <fullName>Withdrawn/Rescinded</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn/Rescinded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tolling_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by a batch class when the Tolling Date Trigger executes to add new tolling date records. This causes dates to recalculate whenever the new tolling dates are added without updating related Investigation records.</description>
        <inlineHelpText>For system use only</inlineHelpText>
        <label>Tolling Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Imports_Domestic_Consumption__c</fullName>
        <label>% of Total Imports/Domestic Consumption%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Petition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Commodity__c</columns>
        <columns>Office__c</columns>
        <columns>Status__c</columns>
        <columns>Petition_Outcome__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Petitions</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Commodity__c</columns>
        <columns>Office__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Petitions</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Petitions</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Commodity__c</columns>
        <columns>Office__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Petitions</label>
    </listViews>
    <listViews>
        <fullName>Petitions_ClosedLocked_Queue_Petition</fullName>
        <filterScope>Queue</filterScope>
        <label>Petitions-ClosedLocked Queue</label>
        <queue>Petitions_ClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Petitions_MigratedClosedLocked_Queue_Petition</fullName>
        <filterScope>Queue</filterScope>
        <label>Petitions-MigratedClosedLocked Queue</label>
        <queue>Petitions_MigratedClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Petitions_Open_Queue_Petition</fullName>
        <filterScope>Queue</filterScope>
        <label>Petitions-Open Queue</label>
        <queue>Petitions_Open_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Petition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Petitions</pluralLabel>
    <recordTypes>
        <fullName>Filed</fullName>
        <active>true</active>
        <description>Filed Petition</description>
        <label>Filed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self_Initiated</fullName>
        <active>true</active>
        <description>Self-Initiated Petition</description>
        <label>Self-Initiated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Initiation_Signature_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Initiation Signature Date until the Calculate Initiation Signature Date in not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,
AND( 
ISNULL( Calculated_Initiation_Signature__c ), 
NOT( ISNULL( Actual_Initiation_Signature__c )) 
)
)</errorConditionFormula>
        <errorMessage>Calculated Initiation Signature Date must be populated in order to enter Actual Initiation Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Initiation_Signature_Not_Required</fullName>
        <active>true</active>
        <description>If type of Petition Segment is equals to any of those two options then Actual Initiation Signature must not be selected</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,
AND ( 
OR (ISPICKVAL(Petition_Outcome__c, &apos;Deficient Petition/Did Not Initiate&apos;), 
ISPICKVAL(Petition_Outcome__c, &apos;Petition Withdrawn/Did Not Initiate&apos;)), 
NOT(ISBLANK(TEXT(Actual_Initiation_Signature__c))) 
)
)</errorConditionFormula>
        <errorMessage>Actual initiation Signature must not be selected with the Type of Petition Outcome selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Initiation_Signature_Required</fullName>
        <active>true</active>
        <description>If type of Petition Segment is equals to any of those two options then Actual Initiation Signature must be selected</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,
AND (
OR (ISPICKVAL(Petition_Outcome__c, &apos;Initiated from Petition&apos;),
ISPICKVAL(Petition_Outcome__c, &apos;Self-Initiated&apos;)),
ISBLANK(TEXT(Actual_Initiation_Signature__c))
)
)</errorConditionFormula>
        <errorMessage>Actual initiation Signature must have a value with the Type of Petition Outcome selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CBP_Case_number_for_AD_and_CVD_Format</fullName>
        <active>false</active>
        <description>CBP Case Number must be formatted specifically this way.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,IF(TEXT(ADCVD_Case_Type__c) = &quot;CVD&quot;, 
(NOT(OR(ISBLANK( CBP_Case_Number__c ),REGEX( CBP_Case_Number__c ,&quot;C-[0-9]{3}-[0-9]{3}&quot;)))), 
(NOT(OR(ISBLANK(CBP_Case_Number__c ),REGEX( CBP_Case_Number__c ,&quot;A-[0-9]{3}-[0-9]{3}&quot;)))) ))</errorConditionFormula>
        <errorDisplayField>CBP_Case_Number__c</errorDisplayField>
        <errorMessage>Format should be A-###-### or C-###-###</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CaseType_must_match_format_of_CaseNumber</fullName>
        <active>false</active>
        <description>ADCVD Case Type should and Case Number must match</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,  
IF(
  OR(
    AND(
      OR(
         ISPICKVAL(ADCVD_Case_Type__c, &apos;AD ME&apos;),
         ISPICKVAL(ADCVD_Case_Type__c, &apos;AD NME&apos;)
         ),
         NOT(BEGINS(ADCVD_Case_Number__c, &quot;A&quot;))
      )
      ,
     AND(
         ISPICKVAL(ADCVD_Case_Type__c, &apos;CVD&apos;),
         NOT(BEGINS(ADCVD_Case_Number__c, &quot;C&quot;))
        )
      ),
     1, 0
    ) = 1
  )</errorConditionFormula>
        <errorDisplayField>ADCVD_Case_Type__c</errorDisplayField>
        <errorMessage>ADCVD Case Type field does not match with the ADCVD Case Number format. For AD cases the ADCVD Case Number format should be A-###-### and for CVD cases the format should be C-###-###.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_number_for_AD_and_CVD_Format</fullName>
        <active>false</active>
        <description>Case Number must be formatted specifically this way.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,IF(TEXT(ADCVD_Case_Type__c) = &quot;CVD&quot;, 
(NOT(OR(ISBLANK(ADCVD_Case_Number__c),REGEX( ADCVD_Case_Number__c,&quot;C-[0-9]{3}-[0-9]{3}&quot;)))), 
(NOT(OR(ISBLANK(ADCVD_Case_Number__c),REGEX( ADCVD_Case_Number__c,&quot;A-[0-9]{3}-[0-9]{3}&quot;)))) ))</errorConditionFormula>
        <errorDisplayField>ADCVD_Case_Number__c</errorDisplayField>
        <errorMessage>Format should be A-###-### or C-###-###</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExtensionBound</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,Initiation_Extension_of_days__c &gt; 20 || Initiation_Extension_of_days__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>Initiation_Extension_of_days__c</errorDisplayField>
        <errorMessage>Initiation extension cannot exceed more than 20 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lit_Resolved_Required_If_Lit_Is_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND( 
 ISPICKVAL( Litigation_YesNo__c , &apos;Yes&apos;) ,
 ISPICKVAL( Litigation_Resolved__c , &apos;&apos;)
))</errorConditionFormula>
        <errorDisplayField>Litigation_Resolved__c</errorDisplayField>
        <errorMessage>Litigation Resolved must cannot be blank if Litigation equals &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Litigation_Resolved_Required</fullName>
        <active>true</active>
        <description>Litigation Resolved cannot be blank if Litigation is &apos;Yes&apos;</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND ( 
ISPICKVAL( Litigation_YesNo__c , &apos;Yes&apos;), 
ISBLANK( TEXT( Litigation_Resolved__c ) ) 
))</errorConditionFormula>
        <errorMessage>Litigation Resolved cannot be blank when Litigation is &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Petition_Outcome_Required</fullName>
        <active>true</active>
        <description>IF Actual_Initiation_Signature__c is not blank THEN Petition_Outcome__c should be required</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND (
NOT(ISBLANK(TEXT(Actual_Initiation_Signature__c ))),
ISPICKVAL(Petition_Outcome__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Petition Outcome is required in order to choose Actual Initiation Signature</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Petition_Outcome_Required_for_Actual_Sig</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND( 
   NOT(ISNULL(Actual_Initiation_Signature__c)),
   ISBLANK(TEXT(Petition_Outcome__c ))
))</errorConditionFormula>
        <errorDisplayField>Petition_Outcome__c</errorDisplayField>
        <errorMessage>The Petition Outcome is required to enter an Actual Initiation Signature</errorMessage>
    </validationRules>
</CustomObject>